--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -1,16 +1,23 @@
-<nav id="navbar" class="navbar navbar-expand-md fixed-top justify-content-between navbar-toggleable-md navbar-dark  ">
+
+	<nav id="navbar" class="navbar navbar-expand-md fixed-top justify-content-between navbar-toggleable-md navbar-dark  ">
 		<div class="container-fluid">
 			<a class="navbar-brand " routerLink="/" > <i class="material-icons">timer</i> Time Logger</a>
+	<!-- 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon navbar-toggler-right"></span>
+			</button> -->
 			<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarMenu" data-label-expanded="Close" aria-expanded="false">
+
 				<span class="sr-only">(toggle)</span>
+
 				<span class="navbar-toggler-icon">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</span>
 			</button>
+			
 
-			<div class="collapse navbar-collapse flex-row-reverse" id="navbarMenu">
+		<div class="collapse navbar-collapse flex-row-reverse" id="navbarMenu">
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Home</a>
@@ -32,10 +39,12 @@
 				</ul>				
 			</div>
 
+
 		</div>
 
 	</nav>
-  
+
+
   <header class="bg-greeny d-flex  align-items-center">
 
 		<div class="container">
@@ -45,32 +54,7 @@
 						<h1>Smart Time Tracking </h1>
 						<p><span class="app-name">TimeLogger</span> is an Open Source Project provides users with simple and intuitive time tracking tool. </p>
 						<span class="glyphicon glyphicon-console" aria-hidden="true"></span>
-						<div class="demo-timer">
-							<div class="demo-overlay_"></div>
-							<section class="timer-section row ">
-								<div class="col-sm-12 col-md-9">
-									<!-- <span class="red-dot"></span> -->
-									<input type="email" class="form-control" id="inputEmail4" placeholder="Enter title.  e.g. Workout, Running">
-								</div>
-								<div class="timer-actions col-sm-12 justify-content-between flex-row-reverse flex-md-row justify-content-md-end col-md-3">
-									<div class="timer-counter justify-content-between">
-										00:23<small>3</small>
-									</div>
-									<button type="button" class="btn rounded-circle btn-success timer-btn"><i class="material-icons">play_arrow</i></button>
-
-								</div>
-								<div class="timer-switch">
-									<ul>
-										<li class="active">
-											<a href="" class="btn btn-sm"><i class="material-icons">timer</i></a>
-										</li>
-										<li class="">
-											<a href="" class="btn btn-sm"><i class="material-icons">timelapse</i></a>
-										</li>
-									</ul>
-								</div>
-							</section>	
-						</div>
+					  <app-demo></app-demo>
 					</div>
 				</div>
 				<div class="col-lg-5">
