--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -1,10 +1,17 @@
 	<nav class="navbar navbar-expand-md navbar-light navbar-fixed-left navbar-dark collapsed ">
 		<div class="navbar-header justify-content-center">
 			<a class="navbar-brand " routerLink="/"> <i class="material-icons">timer</i> <span class="txt"> Time Logger </span></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#SideNav" aria-controls="SideNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
 
+      <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#SideNav" data-label-expanded="Close" aria-expanded="false">
+
+				<span class="sr-only">(toggle)</span>
+
+				<span class="navbar-toggler-icon">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</span>
+			</button>
 		</div>
 		<div class="collapse navbar-collapse " id="SideNav">
 			<ul class="navbar-nav mr-auto">
